--- a/game-page/index.html
+++ b/game-page/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,29 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/game-page.css">
 </head>
+
 <body>
-    
+    <header>
+
+    </header>
+
+    <div class='game-board'>
+        <div id="top-left">x</div>
+        <div id="top-mid">x</div>
+        <div id="top-right">x</div>
+        <div id="mid-left">x</div>
+        <div id="mid-mid">x</div>
+        <div id="mid-right">o</div>
+        <div id="bottom-left">o</div>
+        <div id="bottom-mid">o</div>
+        <div id="bottom-right">o</div>
+    </div>
+
+
 
 
 
     <script type="module" src="./game-page.js"></script>
 </body>
+
 </html>
