game page layout

--- a/game-page/index.html
+++ b/game-page/index.html
@@ -14,18 +14,47 @@
     <header>
 
     </header>
+    <main class="flex-row">
+        <section>
+            <div class='game-board'>
+                <div id="top-left">x</div>
+                <div id="top-mid">x</div>
+                <div id="top-right">x</div>
+                <div id="mid-left">x</div>
+                <div id="mid-mid">x</div>
+                <div id="mid-right">o</div>
+                <div id="bottom-left">o</div>
+                <div id="bottom-mid">o</div>
+                <div id="bottom-right">o</div>
+            </div>
+        </section>
+        <section class="flex-column">
+            <h2>Player</h2>
+            <h3>Too Easy</h3>
+            <div class="flex-row">
+                <div class="flex-column">
+                    <div>1</div>
+                    <div id="wins" class="flex-column">W</div>
+                </div>
+                <div class="flex-column">
+                    <div>2</div>
+                    <div id="losses" class="flex-column">L</div>
+                </div>
+                <div class="flex-column">
+                    <div>3</div>
+                    <div id="cats" class="flex-column">C</div>
+                </div>
+            </div>
+            <button>Play</button>
+            <button>New Series</button>
 
-    <div class='game-board'>
-        <div id="top-left">x</div>
-        <div id="top-mid">x</div>
-        <div id="top-right">x</div>
-        <div id="mid-left">x</div>
-        <div id="mid-mid">x</div>
-        <div id="mid-right">o</div>
-        <div id="bottom-left">o</div>
-        <div id="bottom-mid">o</div>
-        <div id="bottom-right">o</div>
-    </div>
+        </section>
+
+    </main>
+
+
+
+
 
 
 
