--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,53 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/about.css">
 </head>
+
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <h1>About Us</h1>
+        <section class="bio-cards">
+            <div class="bio">
+                <h2>Erik Graciosa</h2>
+                <img>
+                <span>
+                    <h3>Bio</h3>
+                    <p>blah blah blah</p>
+                </span>
+            </div>
+            <div class="bio">
+                <h2>Erik Graciosa</h2>
+                <img>
+                <span>
+                    <h3>Bio</h3>
+                    <p>blah blah blah</p>
+                </span>
+            </div>
+            <div class="bio">
+                <h2>Erik Graciosa</h2>
+                <img>
+                <span>
+                    <h3>Bio</h3>
+                    <p>blah blah blah</p>
+                </span>
+            </div>
+            <div class="bio">
+                <h2>Erik Graciosa</h2>
+                <img>
+                <span>
+                    <h3>Bio</h3>
+                    <p>blah blah blah</p>
+                </span>
+            </div>
+        </section>
+    </main>
+
 
 
 
     <script type="module" src="./about.js"></script>
 </body>
+
 </html>
