add header to first and second pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/header.css">
     <title>Document</title>
 </head>
 
