--- a/game-page/index.html
+++ b/game-page/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/game-page.css">
+    <link rel="stylesheet" href="../styles/header.css">
 </head>
 
 <body>
