style on bio cards

--- a/about/index.html
+++ b/about/index.html
@@ -16,8 +16,8 @@
     </header>
     <main>
         <h1>About Us</h1>
-        <section class="bio-cards">
-            <div class="bio">
+        <section class="spread">
+            <div class="bio-card">
                 <h2>Erik Graciosa</h2>
                 <img>
                 <span>
@@ -25,24 +25,24 @@
                     <p>blah blah blah</p>
                 </span>
             </div>
-            <div class="bio">
-                <h2>Erik Graciosa</h2>
+            <div class="bio-card">
+                <h2>Kevin Fiero</h2>
                 <img>
                 <span>
                     <h3>Bio</h3>
                     <p>blah blah blah</p>
                 </span>
             </div>
-            <div class="bio">
-                <h2>Erik Graciosa</h2>
+            <div class="bio-card">
+                <h2>Sam Formichella</h2>
                 <img>
                 <span>
                     <h3>Bio</h3>
                     <p>blah blah blah</p>
                 </span>
             </div>
-            <div class="bio">
-                <h2>Erik Graciosa</h2>
+            <div class="bio-card">
+                <h2>Shane Upchurch</h2>
                 <img>
                 <span>
                     <h3>Bio</h3>
