--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/header.css">
 </head>
 
 <body>
@@ -19,15 +20,18 @@
         <section class="spread">
             <div class="bio-card">
                 <h2>Erik Graciosa</h2>
-                <img>
-                <span>
-                    <h3>Bio</h3>
-                    <p>blah blah blah</p>
+                <div id="bio-pic">
+                    <img src="../assets/erik.jpg">
+                </div>
+                <h3>Bio</h3>
+                <p>blah blah blah</p>
                 </span>
             </div>
             <div class="bio-card">
                 <h2>Kevin Fiero</h2>
-                <img>
+                <div id="bio-pic">
+                    <img src="../assets/kevin.jpg">
+                </div>
                 <span>
                     <h3>Bio</h3>
                     <p>blah blah blah</p>
@@ -35,7 +39,9 @@
             </div>
             <div class="bio-card">
                 <h2>Sam Formichella</h2>
-                <img>
+                <div id="bio-pic">
+                    <img src="../assets/sam.jpg">
+                </div>
                 <span>
                     <h3>Bio</h3>
                     <p>blah blah blah</p>
@@ -43,7 +49,9 @@
             </div>
             <div class="bio-card">
                 <h2>Shane Upchurch</h2>
-                <img>
+                <div id="bio-pic">
+                    <img src="../assets/shane.jpg">
+                </div>
                 <span>
                     <h3>Bio</h3>
                     <p>blah blah blah</p>
