results page online showing stub data of win,loss,tie

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/header.css">
-    <title>Document</title>
+    <title>T^4 XOXO</title>
 </head>
 
 <body>
