--- a/results/index.html
+++ b/results/index.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>T^4 XOXO</title>
 
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">   
+    <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/results.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <div class="graph">
+            <canvas id="myChart" width="400" height="400"></canvas>
+        </div>
 
 
-
+    </main>
     <script type="module" src="./results.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 </body>
 </html>
