requiring name entry into form

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section>
                 <form id ="user-form" class="flex-column">
                     <span>Enter User Name</span>
-                    <input type="text" name="name" placeholder="Serena van der Woodsen">
+                    <input type="text" name="name" placeholder="Serena van der Woodsen" required>
 
                     <hr>
 
