--- a/results/index.html
+++ b/results/index.html
@@ -14,11 +14,11 @@
 
     </header>
     <main>
-        <div class="graph">
-            <canvas id="myChart" width="400" height="400"></canvas>
+        <div id="main-content" class="graph">
+            <h2>History of Game Results</h2>
+            <canvas id="myChart" width="600" height="600"></canvas>
+            <div id="no-data"></div>
         </div>
-
-
     </main>
     <script type="module" src="./results.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
