renders w,l,c to game board

--- a/game-page/index.html
+++ b/game-page/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet"> 
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Noto+Serif:wght@400;700&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/game-page.css">
@@ -43,21 +45,21 @@
             <div class="scores flex-row">
                 <div class="flex-column flex-centered">
                     <p class="flex-column flex-centered">
-                        <span>17</span>
+                        <span id="total-wins"></span>
                     </p>
                     <div id="wins" class="flex-column">Wins</div>
                 </div>
 
                 <div class="flex-column flex-centered">
                     <p class="flex-column flex-centered">
-                        <span>2</span>
+                        <span id="total-losses"></span>
                     </p>
                     <div id="losses" class="flex-column">Losses</div>
                 </div>
 
                 <div class="flex-column flex-centered">
                     <p class="flex-column flex-centered">
-                        <span>3</span>
+                        <span id="total-cats"></span>
                     </p>
                     <div id="cats" class="flex-column">Cats</div>
                 </div>
