display user info on game page

--- a/game-page/index.html
+++ b/game-page/index.html
@@ -38,9 +38,9 @@
 
         <section class="flex-column player-info">
 
-            <h2>Player</h2>
+            <h2 id="user-name">Player</h2>
 
-            <h3>Too Easy</h3>
+            <h3 id="difficulty">Too Easy</h3>
 
             <div class="scores flex-row">
                 <div class="flex-column flex-centered">
