update color option to red and blue

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
                     <span>Choose Piece Color</span>
                     <label>
-                        <input type="radio" name="color" value="red" checked>
+                        <input type="radio" name="color" value="#FF0000" checked>
                         Red
                     </label>
                     <label>
-                        <input type="radio" name="color" value = "blue">
+                        <input type="radio" name="color" value="#0000FF">
                         Blue
                     </label>
 
