--- a/about/index.html
+++ b/about/index.html
@@ -21,7 +21,7 @@
             <div class="bio-card">
                 <h2>Erik Graciosa</h2>
                 <div id="bio-pic">
-                    <img src="../assets/erik.jpg">
+                    <img src="../assets/ErikO.png">
                 </div>
                 <h3>Bio</h3>
                 <p>blah blah blah</p>
