play button is hidden during game

--- a/game-page/index.html
+++ b/game-page/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <button>Play</button>
+            <button class="hidden">Play</button>
             <button>New Series</button>
 
         </section>
