--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <input type="radio" name="piece" value="X" checked>
                         X's
                     </label>
-                    <label>
+                    <label class="hidden">
                         <input type="radio" name="piece" value="O">
                         O's
                     </label>
