--- a/game-page/index.html
+++ b/game-page/index.html
@@ -45,21 +45,21 @@
             <div class="scores flex-row">
                 <div class="flex-column flex-centered">
                     <p class="flex-column flex-centered">
-                        <span id="total-wins"></span>
+                        <span id="total-wins">0</span>
                     </p>
                     <div id="wins" class="flex-column">Wins</div>
                 </div>
 
                 <div class="flex-column flex-centered">
                     <p class="flex-column flex-centered">
-                        <span id="total-losses"></span>
+                        <span id="total-losses">0</span>
                     </p>
                     <div id="losses" class="flex-column">Losses</div>
                 </div>
 
                 <div class="flex-column flex-centered">
                     <p class="flex-column flex-centered">
-                        <span id="total-cats"></span>
+                        <span id="total-cats">0</span>
                     </p>
                     <div id="cats" class="flex-column">Cats</div>
                 </div>
