--- a/about/index.html
+++ b/about/index.html
@@ -16,48 +16,48 @@
 
     </header>
     <main>
-        <h1>About Us</h1>
-        <section class="spread">
-            <div class="bio-card">
-                <h2>Erik Graciosa</h2>
-                <div id="bio-pic">
-                    <img src="../assets/ErikO.png">
+        <div id='page-content'>
+            <h1>The Developers</h1>
+            <section class="spread">
+                <div class="bio-card">
+                    <h2>Erik Graciosa</h2>
+                    <div id="bio-pic">
+                        <img src="../assets/ErikO.png">
+                    </div>
+                    <p>Erik is a full stack software engineer. Their hobbies include: pinball, biking, and board games.</p>
+                    </span>
                 </div>
-                <h3>Bio</h3>
-                <p>blah blah blah</p>
-                </span>
-            </div>
-            <div class="bio-card">
-                <h2>Kevin Fiero</h2>
-                <div id="bio-pic">
-                    <img src="../assets/kevin.jpg">
+                <div class="bio-card">
+                    <h2>Kevin Fiero</h2>
+                    <div id="bio-pic">
+                        <img src="../assets/kevin.jpg">
+                    </div>
+                    <span>
+                        <p>Kevin is a full stack software engineer. Their hobbies include: 3D printing, board games, and rock climbing.</p>
+                    </span>
                 </div>
-                <span>
-                    <h3>Bio</h3>
-                    <p>blah blah blah</p>
-                </span>
-            </div>
-            <div class="bio-card">
-                <h2>Sam Formichella</h2>
-                <div id="bio-pic">
-                    <img src="../assets/sam.jpg">
+                <div class="bio-card">
+                    <h2>Sam Formichella</h2>
+                    <div id="bio-pic">
+                        <img src="../assets/sam.jpg">
+                    </div>
+                    <span>
+                        <p>Sam is a full stack software engineer. Their hobbies include: math, Counter Strike, and music.</p>
+                    </span>
                 </div>
-                <span>
-                    <h3>Bio</h3>
-                    <p>blah blah blah</p>
-                </span>
-            </div>
-            <div class="bio-card">
-                <h2>Shane Upchurch</h2>
-                <div id="bio-pic">
-                    <img src="../assets/shane.jpg">
+                <div class="bio-card">
+                    <h2>Shane Upchurch</h2>
+                    <div id="bio-pic">
+                        <img src="../assets/shane.jpg">
+                    </div>
+                    <span>
+                        <p>Shane is a full stack software engineer. Their hobbies include: hiking, eating, and playing with their son.</p>
+                    </span>
                 </div>
-                <span>
-                    <h3>Bio</h3>
-                    <p>blah blah blah</p>
-                </span>
-            </div>
-        </section>
+            </section>
+        </div>
+        
+
     </main>
 
 
