underline header fix

--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <div id='page-content'>
-            <h1>The Developers</h1>
+            <h1 id='about-header'>The Developers</h1>
             <section class="spread">
                 <div class="bio-card">
                     <h2>Erik Graciosa</h2>
