--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
                     <span>Choose Game Style</span>
                     <label>
-                        <input type="radio" name="game-style" value="easy" checked>
-                        Easy
+                        <input type="radio" name="game-style" value="competitive" checked>
+                        Competitive
                     </label>
 
                     <button id="submit-button">Submit</button>
