choose easy or competitive

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                     <hr>
 
                     <span>Choose Game Style</span>
-                    <label>
-                        <input type="radio" name="game-style" value="competitive" checked>
-                        Competitive
+                    <label class='flex-column'>
+                        <label><input type="radio" name="game-style" value="easy" checked> Easy </label>
+                        <label><input type="radio" name="game-style" value="competitive"> Competitive </label>
                     </label>
 
                     <button id="submit-button">Submit</button>
