--- a/about/index.html
+++ b/about/index.html
@@ -22,41 +22,49 @@
                 <div class="bio-card">
                     <h2>Erik Graciosa</h2>
                     <div id="bio-pic">
-                        <img src="../assets/ErikO.png">
+                        <img src="../assets/Erik-x.png">
+                        <img src="../assets/Erik-o.png">
                     </div>
-                    <p>Erik is a full stack software engineer. Their hobbies include: pinball, biking, and board games.</p>
+                    <p>Erik is a full stack software engineer. Their hobbies include: pinball, biking, and board games.
+                    </p>
                     </span>
                 </div>
                 <div class="bio-card">
                     <h2>Kevin Fiero</h2>
                     <div id="bio-pic">
-                        <img src="../assets/kevin.jpg">
+                        <img src="../assets/kevin-o.jpg">
+                        <img src="../assets/kevin-x.jpg">
                     </div>
                     <span>
-                        <p>Kevin is a full stack software engineer. Their hobbies include: 3D printing, board games, and rock climbing.</p>
+                        <p>Kevin is a full stack software engineer. Their hobbies include: 3D printing, board games, and
+                            rock climbing.</p>
                     </span>
                 </div>
                 <div class="bio-card">
                     <h2>Sam Formichella</h2>
                     <div id="bio-pic">
-                        <img src="../assets/sam.jpg">
+                        <img src="../assets/sam-x.jpg">
+                        <img src="../assets/sam-o.jpg">
+                        <span>
+                            <p>Sam is a full stack software engineer. Their hobbies include: math, Counter Strike, and
+                                music.</p>
+                        </span>
                     </div>
-                    <span>
-                        <p>Sam is a full stack software engineer. Their hobbies include: math, Counter Strike, and music.</p>
-                    </span>
-                </div>
-                <div class="bio-card">
-                    <h2>Shane Upchurch</h2>
-                    <div id="bio-pic">
-                        <img src="../assets/shane.jpg">
+                    <div class="bio-card">
+                        <h2>Shane Upchurch</h2>
+                        <div id="bio-pic">
+                            <img src="../assets/shane-o.jpeg">
+                            <img src="../assets/shane-x.jpeg">
+                        </div>
+                        <span>
+                            <p>Shane is a full stack software engineer. Their hobbies include: hiking, eating, and
+                                playing
+                                with their son.</p>
+                        </span>
                     </div>
-                    <span>
-                        <p>Shane is a full stack software engineer. Their hobbies include: hiking, eating, and playing with their son.</p>
-                    </span>
-                </div>
             </section>
         </div>
-        
+
 
     </main>
 
