--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/about.css">
     <link rel="stylesheet" href="../styles/header.css">
+    <title>About</title>
 </head>
 
 <body>
@@ -58,7 +58,7 @@
                         <img src="../assets/shane-x.jpeg">
                     </div>
                     <span>
-                        <p>Shane is a full stack software engineer. Their hobbies include: hiking, eating, and
+                        <p>Shane is a full stack software engineer. Their hobbies include: hiking, cooking, and
                             playing
                             with their son.</p>
                     </span>
