about us styling

--- a/about/index.html
+++ b/about/index.html
@@ -25,8 +25,12 @@
                         <img src="../assets/Erik-x.png">
                         <img src="../assets/Erik-o.png">
                     </div>
-                    <p>Erik is a full stack software engineer. Their hobbies include: pinball, biking, and board games.
-                    </p>
+                    <span>Erik is a full stack software engineer. Their hobbies include:
+                        <ul>
+                            <li> Pinball</li>
+                            <li> Biking</li>
+                            <li> Board Games</li>
+                        </ul>
                     </span>
                 </div>
                 <div class="bio-card">
@@ -35,9 +39,12 @@
                         <img src="../assets/kevin-o.jpg">
                         <img src="../assets/kevin-x.jpg">
                     </div>
-                    <span>
-                        <p>Kevin is a full stack software engineer. Their hobbies include: 3D printing, board games, and
-                            rock climbing.</p>
+                    <span>Erik is a full stack software engineer. Their hobbies include:
+                        <ul>
+                            <li> 3D Printing</li>
+                            <li> Board Games</li>
+                            <li> Rock Climbing</li>
+                        </ul>
                     </span>
                 </div>
                 <div class="bio-card">
@@ -46,9 +53,12 @@
                         <img src="../assets/sam-x.jpg">
                         <img src="../assets/sam-o.jpg">
                     </div>
-                    <span>
-                        <p>Sam is a full stack software engineer. Their hobbies include: math, Counter Strike, and
-                            music.</p>
+                    <span>Erik is a full stack software engineer. Their hobbies include:
+                        <ul>
+                            <li> Math</li>
+                            <li> CS:GO</li>
+                            <li> Music</li>
+                        </ul>
                     </span>
                 </div>
                 <div class="bio-card">
@@ -57,11 +67,12 @@
                         <img src="../assets/shane-o.jpeg">
                         <img src="../assets/shane-x.jpeg">
                     </div>
-                    <span>
-                        <p>Shane is a full stack software engineer. Their hobbies include: hiking, cooking, and
-                            playing
-                            with their son.</p>
-                    </span>
+                    <span>Erik is a full stack software engineer. Their hobbies include:</span>
+                    <ul>
+                        <li> Hiking</li>
+                        <li> Cooking</li>
+                        <li> Playing with their son</li>
+                    </ul>
                 </div>
             </section>
         </div>
