add sam x o pics

--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
                     <span>Erik is a full stack software engineer. Their hobbies include:
                         <ul>
                             <li> Math</li>
-                            <li> CS:GO</li>
+                            <li> Cooking</li>
                             <li> Music</li>
                         </ul>
                     </span>
