removes results and play links from home page header

--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@
                         <img src="../assets/kevin-o.jpg">
                         <img src="../assets/kevin-x.jpg">
                     </div>
-                    <span>Erik is a full stack software engineer. Their hobbies include:
+                    <span>Kevin is a full stack software engineer. Their hobbies include:
                         <ul>
                             <li> 3D Printing</li>
                             <li> Board Games</li>
@@ -53,7 +53,7 @@
                         <img src="../assets/sam-x.jpg">
                         <img src="../assets/sam-o.jpg">
                     </div>
-                    <span>Erik is a full stack software engineer. Their hobbies include:
+                    <span>Sam is a full stack software engineer. Their hobbies include:
                         <ul>
                             <li> Math</li>
                             <li> Cooking</li>
@@ -67,11 +67,11 @@
                         <img src="../assets/shane-o.jpeg">
                         <img src="../assets/shane-x.jpeg">
                     </div>
-                    <span>Erik is a full stack software engineer. Their hobbies include:</span>
+                    <span>Shane is a full stack software engineer. His hobbies include:</span>
                     <ul>
                         <li> Hiking</li>
                         <li> Cooking</li>
-                        <li> Playing with their son</li>
+                        <li> Playing with his son</li>
                     </ul>
                 </div>
             </section>
