styling consistent across all pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/reset.css">    
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-   
+
     <header>
 
     </header>
@@ -24,9 +24,9 @@
     <main>
         <div class="flex-row flex-centered">
             <section id='box-one'>
-                <form id ="user-form" class="flex-column">
+                <form id="user-form" class="flex-column">
                     <span>Enter User Name</span>
-                    <input type="text" name="name" placeholder="Serena van der Woodsen" required>
+                    <input type="text" name="name" placeholder="Tic Tackus Towus" required>
 
                     <hr>
 
@@ -51,10 +51,10 @@
                         <option value="green">Green</option>
                         <option value="blue">Blue</option>
                         <option value="purple">Purple</option>
-                        <option value="pink">Pink</option>
+                        <option value="fuchsia">Pink</option>
                         <option value="black">Black</option>
                         <option value="brown">Brown</option>
-                      </select>
+                    </select>
 
                     <hr>
 
@@ -72,7 +72,7 @@
                 <h2><span>Rules of Tic Tac Toe</span></h2>
 
                 <ul>
-                    <li> The objective is to place three of the same piece in a row, either:</li>
+                    <li> The objective is to place three of the same game pieces in a row, either:</li>
 
                     <ul>
                         <li> Horizonal</li>
@@ -82,7 +82,8 @@
                     <br>
                     <li> Players will place pieces alternating with X going first.</li>
                     <br>
-                    <li> The game ends after a player wins by placing three of the same piece in a row OR the game board is full (9 moves) and results in cat's game.</li>
+                    <li> The game ends after a player wins by placing three of the same piece in a row OR the game board
+                        is full (9 moves) and results in cat's game.</li>
                 </ul>
             </section>
         </div>
