rule changes in front page

--- a/index.html
+++ b/index.html
@@ -30,18 +30,6 @@
 
                     <hr>
 
-                    <span>Choose Game Pieces</span>
-                    <label>
-                        <input type="radio" name="piece" value="X" checked>
-                        X's
-                    </label>
-                    <!-- <label class="hidden">
-                        <input type="radio" name="piece" value="O">
-                        O's
-                    </label> -->
-
-                    <hr>
-
                     <span>Choose Piece Color</span>
 
                     <select id="color-dropdown" name="color">
@@ -80,10 +68,10 @@
                         <li> Diagonal</li>
                     </ul>
                     <br>
-                    <li> Players will place pieces alternating with X going first.</li>
+                    <li> You will always be X and your opponent will always be O. The first player will alternate each round.</li>
                     <br>
                     <li> The game ends after a player wins by placing three of the same piece in a row OR the game board
-                        is full (9 moves) and results in cat's game.</li>
+                        is full (9 moves) and results in a tie (cat's) game.</li>
                 </ul>
             </section>
         </div>
