remove new series button and more styling to game-page

--- a/game-page/index.html
+++ b/game-page/index.html
@@ -64,9 +64,8 @@
                     <div id="cats" class="flex-column">Cats</div>
                 </div>
             </div>
+            <button class="hidden">Play Again!</button>
 
-            <button class="hidden">Play</button>
-            <button>New Series</button>
 
         </section>
 
