--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                     <hr>
 
-                    <span>Choose Game Style</span>
+                    <span>Choose Difficulty Level</span>
                     <label class='flex-column'>
                         <label><input type="radio" name="game-style" value="easy" checked> Easy </label>
                         <label><input type="radio" name="game-style" value="competitive"> Competitive </label>
