--- a/results/index.html
+++ b/results/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T^4 XOXO</title>
-
-    <link rel="stylesheet" href="../styles/style.css">   
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/results.css">
+    <title>Results</title>
 </head>
+
 <body>
     <header>
 
@@ -21,10 +23,11 @@
         </div>
         <div id="next-content" class="graph">
             <h2 class="titles">Histogram: # of Turns/Game</h2>
-            <canvas id="histogram" width="600" height="600"><s/canvas>
+            <canvas id="histogram" width="600" height="600"><s /canvas>
         </div>
     </main>
     <script type="module" src="./results.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 </body>
+
 </html>
