fixes difficulty level to mode switch

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
                     <span>Choose Difficulty Level</span>
                     <label class='flex-column'>
-                        <label><input type="radio" name="game-style" value="easy" checked> Easy </label>
-                        <label><input type="radio" name="game-style" value="competitive"> Competitive </label>
+                        <label><input type="radio" name="game-style" value="Easy" checked> Easy </label>
+                        <label><input type="radio" name="game-style" value="Competitive"> Competitive </label>
                     </label>
 
                     <button id="submit-button">Submit</button>
@@ -68,7 +68,8 @@
                         <li> Diagonal</li>
                     </ul>
                     <br>
-                    <li> You will always be X and your opponent will always be O. The first player will alternate each round.</li>
+                    <li> You will always be X and your opponent will always be O. The first player will alternate each
+                        round.</li>
                     <br>
                     <li> The game ends after a player wins by placing three of the same piece in a row OR the game board
                         is full (9 moves) and results in a tie (cat's) game.</li>
