refactored winLine, cleared whitespace, editted Competitive/Easy wording

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
                     <span>Choose Difficulty Level</span>
                     <label class='flex-column'>
-                        <label><input type="radio" name="game-style" value="easy" checked> Easy </label>
-                        <label><input type="radio" name="game-style" value="competitive"> Competitive </label>
+                        <label><input type="radio" name="game-style" value="Easy" checked> Easy </label>
+                        <label><input type="radio" name="game-style" value="Competitive"> Competitive </label>
                     </label>
 
                     <button id="submit-button">Submit</button>
