adding display winner name

--- a/game-page/index.html
+++ b/game-page/index.html
@@ -62,6 +62,7 @@
                 </div>
             </div>
             <button class="hidden">Play Again!</button>
+            <h2 id="win-msg" class="hidden">Who wins</h2>
 
 
         </section>
