--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="./styles/header.css">
-    <title>T^4 XOXO</title>
+    <link rel="icon" href="./assets/cat.svg"/>
+    <title>Tic-Tac-Toe!</title>
 </head>
 
 <body>
