--- a/game-page/index.html
+++ b/game-page/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/game-page.css">
     <link rel="stylesheet" href="../styles/header.css">
-    <link rel="icon" href="./assets/cat.svg"/>
+    <link rel="icon" href="../assets/cat.svg"/>
     <title>Tic-Tac-Toe!</title>
 </head>
 
