--- a/results/index.html
+++ b/results/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/results.css">
-    <link rel="icon" href="./assets/cat.svg"/>
+    <link rel="icon" href="../assets/cat.svg"/>
     <title>Tic-Tac-Toe</title>
 </head>
 
